--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,6 +8,13 @@
 	},
 	"features": {
 		"ghcr.io/devcontainers/features/github-cli:1": {}
+	},
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"bierner.github-markdown-preview"
+			]
+		}
 	}
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
