--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -23,5 +23,15 @@ jobs:
     - name: Build
       run: make build
 
+  test:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.20'
+
     - name: Test
       run: make test
