--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,9 @@
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				"bierner.github-markdown-preview"
+				"bierner.github-markdown-preview",
+				"yzhang.markdown-all-in-one",
+				"DavidAnson.vscode-markdownlint"
 			]
 		}
 	}
